Debian: fix compile error "truncated writing up to 255 bytes"
map_tacplus_user.c:334:50: error: ‘%s’ directive output may be truncated writing
  up to 255 bytes into a region of size 122 [-Werror=format-truncation=]

--- a/debian/rules
+++ b/debian/rules
@@ -8,6 +8,9 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 SHELL := sh -e
+CFLAGS = $(shell dpkg-buildflags --get CFLAGS)
+CFLAGS+=-g3 -Wno-format-truncation
+export CFLAGS
 
 %:
 	dh  $@ --with autoreconf
